# astromodule

./: .buildinfo  .gitignore  MANIFEST.ini  Pipfile  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py
_modules/: index.html
_sources/: index.rst.txt  reference.rst.txt
api/: astromodule.datamodel.Answer.html  astromodule.datamodel.DESI.html  astromodule.datamodel.GD12.html  astromodule.datamodel.GD5.html  astromodule.datamodel.GD8.html  astromodule.datamodel.Question.html  astromodule.datamodel.Questions.html  astromodule.datamodel.html  astromodule.distance.arcsec2mpc.html  astromodule.distance.html  astromodule.distance.mpc2arcsec.html  astromodule.hp.CategoricalHyperParameter.html  astromodule.hp.ConstantHyperParameter.html  astromodule.hp.FloatHyperParameter.html  astromodule.hp.HP.html  astromodule.hp.HyperParameter.html  astromodule.hp.HyperParameterSet.html  astromodule.hp.IntHyperParameter.html  astromodule.hp.html  astromodule.io.batch_download_file.html  astromodule.io.compress_fits.html  astromodule.io.download_file.html  astromodule.io.html  astromodule.io.load_csv.html  astromodule.io.load_feather.html  astromodule.io.load_fits.html  astromodule.io.load_parquet.html  astromodule.io.load_table.html  astromodule.io.load_tdat.html  astromodule.io.load_tsv.html  astromodule.io.merge_pdf.html  astromodule.io.parallel_function_executor.html  astromodule.io.read_image.html  astromodule.io.read_table.html  astromodule.io.save_table.html  astromodule.io.write_image.html  (+54 more)
docs/: conf.py  (+2 more)
(+124 files in other folders)
