[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://nmcardoso.github.io/astromodule"
Documentation = "https://nmcardoso.github.io/astromodule"
Repository = "https://github.com/nmcardoso/astromodule"
Issues = "https://github.com/nmcardoso/astromodule/issues"
Changelog = "https://github.com/nmcardoso/astromodule/blob/main/CHANGELOG.md"